<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.taylorearl.cs3270a3.bottom">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_weight="1"
            android:text="@string/gamesPlayed" />

        <TextView
            android:id="@+id/gamesPlayed"
            android:layout_width="match_parent"
            android:textSize="25sp"
            android:layout_weight="3"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_weight="1"
            android:text="@string/pwinCount" />

        <TextView
            android:id="@+id/phoneWinCount"
            android:layout_width="match_parent"
            android:textSize="25sp"
            android:layout_weight="3"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_weight="1"
            android:text="@string/mwinCount" />

        <TextView
            android:id="@+id/myWinCount"
            android:layout_width="match_parent"
            android:textSize="25sp"
            android:layout_weight="3"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_weight="1"
            android:text="@string/tieGame" />

        <TextView
            android:id="@+id/tieGame"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:textSize="25sp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset" />

</LinearLayout>
